--- a/SHZN/.settings/org.eclipse.core.resources.prefs
+++ b/SHZN/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,8 @@ eclipse.preferences.version=1
 encoding//src/SHZN/all_test.py=utf-8
 encoding//src/SHZN/allcase_list.py=utf-8
 encoding//src/SHZN/test_tudifenlei.py=utf-8
+encoding//src/SHZN/test_tudifuken.py=utf-8
+encoding//src/SHZN/test_tudikaifa.py=utf-8
+encoding//src/SHZN/test_tudizhengshou.py=utf-8
+encoding//src/SHZN/test_xitongguanli.py=utf-8
 encoding//src/SHZN/test_yizhangtu.py=utf-8
